--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,12 +3,12 @@
  <h2 class="text">説明文</h2>
  <div class="row login">
    <div class="col-md-offset-4 col-md-4">
-    <%= link_to 'Log in', '#', class: 'btn btn-block btn-white' %>
+    <%= link_to 'Log in', '#', class: 'btn' %>
    </div>
   </div>
  <div class="row signup">
    <div class="col-md-offset-4 col-md-4">
-    <%= link_to 'Sign up', '#', class: 'btn btn-block btn-white' %>
+    <%= link_to 'Sign up', new_user_path, class: 'btn' %>
    </div>
   </div>
 </div>
