--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
  <h2 class="text">説明文</h2>
  <div class="row login">
    <div class="col-md-offset-4 col-md-4">
-    <%= link_to 'Log in', '#', class: 'btn' %>
+    <%= link_to 'Log in', login_path, class: 'btn' %>
    </div>
   </div>
  <div class="row signup">
