--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
- <h1 class="text">タイトル</h1>
- <h2 class="text">説明文</h2>
+ <h1 class="text">継続アプリ</h1>
+ <h2 class="text">毎日やることを決めて継続しよう</h2>
  <div class="row login">
    <div class="col-md-offset-4 col-md-4">
     <%= link_to 'Log in', login_path, class: 'btn' %>
