--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,6 +4,8 @@
 <% @tasks.each do |task| %>
   <%= task.title %>
   <%= link_to '編集', edit_task_path(task) %>
+  <%= link_to '削除', task_path(task), method: :delete %>
+  
 <% end %>
 
 <%= link_to 'add', new_task_path %>
