--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "custom";
+
+/*
+ *= require simple_calendar #ここに追記します
+ *= require_tree .
+ *= require_self
+ */
