--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,10 +2,21 @@
 
 <h2>tasks</h2>
 <% @tasks.each do |task| %>
+<div>
   <%= task.title %>
+</div>
+  <%= task.start_time.strftime("%Y-%m-%d %H:%M") %>
   <%= link_to '編集', edit_task_path(task) %>
   <%= link_to '削除', task_path(task), method: :delete %>
   
 <% end %>
 
+
+  
+  
+  
+  
+  
+
 <%= link_to 'add', new_task_path %>
+
