--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,13 @@
 <h1>add task</h1>
 <%= form_for(@task) do |f| %>
+
 <%= f.label :title %>
 <%= f.text_field :title %>
+
+<%= f.label :start_time %>
+<%= f.datetime_select :start_time %>
+
+
   
    <%= f.submit "create!" %>
    <% end %>
