--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
     <% flash.each do |key, value| %>
      <div class= "alert alert-<%= key %>" role="alert"><%= value %></div>
     <% end %> 
