--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,8 +1,11 @@
-<h1>編集</h1>
-<%= form_for(@task) do |f| %>
- <%= f.label :title %>
- <%= f.text_field :title %>
+
+<div class="col-md-offset-4 col-md-4">
+ <h1>編集</h1>
+ <%= form_for(@task) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
  
- <%= f.submit "ok" %>
-<% end %>
-<%= link_to 'back', tasks_path %>
+  <%= f.submit "ok" %>
+ <% end %>
+ <%= link_to 'back', tasks_path %>
+</div>
