--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,15 +1,23 @@
-<h1>Task</h1>
+<div class="col-md-offset-4 col-md-4">
+ <h1>やること</h1>
+</div>
 
-<h2>tasks</h2>
-<% @tasks.each do |task| %>
+<div class="col-md-offset-4 col-md-4"> 
+ <h2>やることリスト</h2>
+</div>
+
+<div class="col-md-offset-4 col-md-4"> 
+ <% @tasks.each do |task| %>
 <div>
   <%= task.title %>
 </div>
-  <%= task.start_time.strftime("%Y-%m-%d %H:%M") %>
-  <%= link_to '編集', edit_task_path(task) %>
-  <%= link_to '削除', task_path(task), method: :delete %>
+   <%= task.start_time.strftime("%Y-%m-%d %H:%M") %>
+   <%= link_to '変更', edit_task_path(task) %>
+   <%= link_to '終了！', task_path(task), method: :delete %>
   
-<% end %>
+ <% end %>
+ <%= link_to '追加', new_task_path %>
+</div>
 
 
   
@@ -18,5 +26,5 @@
   
   
 
-<%= link_to 'add', new_task_path %>
+
 
